...
    <http://www.gnu.org/licenses/lgpl>.
-->

<resources>

    <!-- General -->
    <string name="app_label">JasperMobile</string>
    <!-- Action Bar -->
    <string name="ab_settings">Settings</string>

    <!-- Home Activity -->
    <string name="h_title">JasperMobile</string>
    <string name="h_repository_label">Repository</string>
    <string name="h_repository_descr">Browse and view repository items</string>
    <string name="h_library_label">Library</string>
...
    <string name="spm_cm_edit">Edit</string>
    <string name="spm_cm_delete">Delete</string>
    <!-- Action Bar -->
    <string name="spm_ab_add_profile">Add Server Profile</string>
    <!-- Delete Dialog -->
    <string name="spm_ad_delete_profile_msg">Are you sure you want to delete this server profile?</string>
    <string name="spm_delete_btn">Delete</string>
    <string name="spm_cancel_btn">Cancel</string>


    <!-- Server Profile Activity -->
    <string name="sp_bc_add_profile">New Server Profile</string>
    <string name="sp_bc_edit_profile">Edit Server Profile</string>
...
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
    <!-- Action Bar -->
    <string name="r_ab_favorites">Favorites</string>
    <string name="r_ab_search">Search</string>
    <string name="r_ab_refresh">Refresh</string>
    <!-- Context Menu -->
    <string name="r_cm_open">Open</string>
    <string name="r_cm_run">Run</string>
    <string name="r_cm_view_details">View Details</string>
    <string name="r_cm_add_to_favorites">Add to favorites</string>
    <string name="r_cm_remove_from_favorites">Remove from favorites</string>
    <!-- Progress Dialog -->
    <string name="r_pd_running_report_msg">Running report…</string>
    <!-- Error messages -->
    <string name="r_error_server_not_supported">Server version is older than 5.0, which is not supported.</string>


    <!-- Search Activity -->
    <string name="s_title">Search Results</string>
...
    <string name="sr_save_report_btn">Save</string>
    <!-- Toasts -->
    <string name="sr_t_report_saved">Report saved successfully</string>
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">Can\'t be empty</string>
    <string name="sr_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sr_error_report_exists">A report with this name already exists</string>


    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>


    <!-- Saved Reports Activity -->
    <string name="sdr_ab_title">Saved Reports</string>
    <!-- Context Menu -->
    <string name="sdr_cm_open">Open</string>
...
    <string name="sdr_rrd_hint">Report name</string>
    <string name="sdr_rrd_error_name_is_empty">Can\'t be empty</string>
    <string name="sdr_rrd_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sdr_rrd_error_report_exists">A report with this name already exists</string>
    <!-- Delete Report Dialog -->
    <string name="sdr_drd_title">Delete report</string>
    <string name="sdr_drd_msg">Do you really want to delete \"%s\"?</string>
    <!-- Toasts -->
    <string name="sdr_t_no_app_available">No \"%s\" viewer installed.</string>
    <string name="sdr_t_report_renaming_error">Cannot rename report</string>
    <string name="sdr_t_report_deletion_error">Cannot delete report</string>


    <!-- Settings activity -->
    <string name="st_title">Settings</string>
    <string name="st_category_repo_cache">Repository Cache</string>
    <string name="st_category_connection">Connection</string>
    <string name="st_title_cache_enable">Enable cache</string>
    <string name="st_title_cache_expiration">Cache expiration</string>
    <string name="st_title_connect_timeout">Connection timeout</string>
    <string name="st_title_read_timeout">Data read timeout</string>
...
