...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/switchLayout"
        android:icon="@drawable/ic_menu_module"
        android:orderInCategory="55"
        android:title="@string/r_ab_switch"
        app:showAsAction="ifRoom" />

</menu>
